--- a/android/CrossPlatformClient/app/build.gradle
+++ b/android/CrossPlatformClient/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -47,4 +48,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'com.github.hotchemi:permissionsdispatcher:2.3.1'
+    kapt 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
 }
